fix #870: fix row's side margin to remove horizontal scroll from post's changelog toolbar

--- a/frontend/style/misago/post-changelog.less
+++ b/frontend/style/misago/post-changelog.less
@@ -24,6 +24,13 @@
   }
 }
 
+
+.post-changelog-toolbar .row {
+  margin-left: -12px;
+  margin-right: -12px;
+}
+
+
 .post-changelog-toolbar .post-change-label {
   @media screen and (max-width: @screen-xs-max) {
     text-align: center;
